# native_client

./: CMakeLists.txt  common.txt  tools.txt
src/: CMakeLists.txt
src/include/sdk/: README  _ansi.h  inttypes.h  stdio.h  stdlib.h
src/include/sdk/bits/: nacl_syscalls.h
src/include/sdk/machine/: _types.h
src/include/sdk/sys/: _types.h  config.h  reent.h  types.h
src/shared/gio/: CMakeLists.txt  gio_mem_snapshot.c
src/shared/imc/posix/: nacl_imc_posix.cc
src/shared/platform/: CMakeLists.txt  nacl_host_desc.h
src/shared/platform/linux/: nacl_clock.c  nacl_host_dir.c
src/shared/platform/posix/: condition_variable.c  nacl_find_addrsp.c  nacl_host_desc.c
src/shared/srpc/: CMakeLists.txt
src/trusted/cpu_features/arch/x86/: cpu_x86.c
src/trusted/desc/posix/: nacl_desc.c
src/trusted/fault_injection/: fault_injection.h  nacl_fi_test.c
src/trusted/platform_qualify/: nacl_cpuwhitelist.h
src/trusted/service_runtime/: CMakeLists.txt  nacl_all_modules.c  nacl_app.h  nacl_globals.c  nacl_signal_common.c  nacl_switch_to_app.h  nacl_syscall_common.c  nacl_syscall_hook.c  nacl_text.c  sel_addrspace.c  sel_addrspace.h  sel_ldr.c  sel_ldr.h  sel_ldr_standard.c  sel_main.c  sel_main_chrome.c  sel_qualify.c  sel_validate_image.c  thread_suspension_common.c
src/trusted/service_runtime/arch/x86_64/: nacl_syscall_64.S
src/trusted/service_runtime/include/bits/: mman.h
src/trusted/service_runtime/include/machine/: _types.h
src/trusted/service_runtime/include/sys/: mman.h  stat.h  time.h
src/trusted/service_runtime/linux/: CMakeLists.txt  nacl_bootstrap_args.c  nacl_signal_32.c  nacl_thread_nice.c  thread_suspension.c
src/trusted/service_runtime/posix/: nacl_signal.c  sel_memory.c
src/trusted/validator/: ncvalidate.h  validator_init.c
src/untrusted/irt/: CMakeLists.txt
src/untrusted/nacl/: CMakeLists.txt
